--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 name: "兔苑",
                 icon: "🐰",
                 color: "from-pink-400 to-rose-500",
-                desc: "机智、敏感、敏锐、勇敢、慢热、善良、边界感强、冒失、爱喝水、（爱吃菜）（爱吃胡萝卜🥕）、急躁、共情、有反差（敏感胆小但有好奇心努力探索，一开始会有一点封闭但是信任之后会能打开自己）、向「我们」敞开的自我",
+                desc: "机智、敏感、敏锐、勇敢、慢热、善良、边界感强、冒失、爱喝水、急躁、共情、有反差、向「我们」敞开的自我",
             },
             elephant: {
                 name: "象苑",
@@ -451,3 +451,4 @@
 </body>
 
 </html>
+
