--- a/index.html
+++ b/index.html
@@ -397,13 +397,13 @@
                                 <div className="mb-8 md:mb-10 p-5 md:p-6 bg-amber-50 rounded-2xl border-2 border-amber-200 flex flex-col md:flex-row items-center justify-center text-center md:text-left gap-4 shadow-sm allow-select">
                                     <Info className="w-8 h-8 md:w-10 md:h-10 text-amber-500 flex-shrink-0" />
                                     <p className="text-base md:text-xl font-bold text-amber-800 leading-snug">
-                                        最终分苑结果由旅人伙伴们的分苑意向和魔法不可抗力决定，请参考分苑测试结果提交分苑意向！
+                                        最终分苑结果由旅人伙伴们的分苑意向和魔法不可抗力决定，可以参考此测试结果提交分苑意向~也可以不参考！
                                     </p>
                                 </div>
 
                                 <h4 className="text-lg md:text-xl font-bold text-slate-800 mb-6 md:mb-8 flex items-center gap-2">
                                 <div className="w-1 h-6 bg-blue-500 rounded-full"></div>
-                                入苑成分分析表
+                                分苑成分分析表
                                 </h4>
                                 
                                 <div className="space-y-5 md:space-y-6">
@@ -451,4 +451,5 @@
 </body>
 
 </html>
+
 
